force-app/main/default/objects/Frete__c/Frete__c.object-meta.xml
<CustomObject>
    <description>Dados de frete.</description>
    <label>Frete</label>
    <nameField>
        <label>Nome do Frete</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fretes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>