force-app/main/default/objects/Frete__c/fields/CentroDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CentroDistribuicao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Centro de distribuição aonde o pedido será enviado.</description>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Fretes</relationshipLabel>
    <relationshipName>Fretes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>