force-app/main/default/objects/Frete__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cidade para entrega.</description>
    <label>Cidade</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Cidade__c.Estado__c</field>
            <operation>equals</operation>
            <valueField>$Source.Estado__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Fretes</relationshipLabel>
    <relationshipName>Fretes</relationshipName>
    <type>Lookup</type>
</CustomField>