force-app/main/default/objects/Frete__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Estado da entrega</description>
    <label>Estado</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Estado não existe para país selecionado</errorMessage>
        <filterItems>
            <field>Estado__c.Pais__c</field>
            <operation>equals</operation>
            <valueField>$Source.Pais__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Fretes</relationshipLabel>
    <relationshipName>Fretes</relationshipName>
    <type>Lookup</type>
</CustomField>