force-app/main/default/objects/Frete__c/fields/HierarquiaProduto__c.field-meta.xml
<CustomField>
    <fullName>HierarquiaProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hierarquia do produto (alternativo ao produto).</description>
    <label>Hierarquia de Produto</label>
    <referenceTo>HierarquiaProduto__c</referenceTo>
    <relationshipLabel>Fretes</relationshipLabel>
    <relationshipName>Fretes</relationshipName>
    <type>Lookup</type>
</CustomField>