force-app/main/default/objects/Frete__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>País da entrega.</description>
    <label>País</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Fretes</relationshipLabel>
    <relationshipName>Fretes</relationshipName>
    <type>Lookup</type>
</CustomField>