force-app/main/default/objects/Frete__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <description>Valor do frete calculado pela localidade informada.</description>
    <formula>IF(NOT(ISBLANK( Cidade__c )), 30, IF(NOT(ISBLANK( Estado__c )), 20, IF(NOT(ISBLANK( Pais__c )), 10, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>