force-app/main/default/objects/Frete__c/validationRules/XOR_Cidade_Estado_Pais.validationRule-meta.xml
<ValidationRule>
    <fullName>XOR_Cidade_Estado_Pais</fullName>
    <active>true</active>
    <description>Deve ser selecionado uma cidade, ou um estado ou um país.</description>
    <errorConditionFormula>NOT(
  OR(
    AND(ISBLANK( Cidade__c ), ISBLANK( Estado__c ), NOT(ISBLANK( Pais__c ))),
    AND(ISBLANK( Cidade__c ), NOT(ISBLANK( Estado__c )), ISBLANK( Pais__c )),
    AND(NOT(ISBLANK( Cidade__c )), ISBLANK( Estado__c ), ISBLANK( Pais__c ))
  )
)</errorConditionFormula>
    <errorMessage>Deve ser selecionado um e apenas um dos campos: cidade, estado ou país.</errorMessage>
</ValidationRule>